@@ -1,10 +1,11 @@
 BUGS:
-raster: handling exposes during move and resize modes > 0 (dont do it)
 raster: group properties are not remembered :(
 raster: in E-docs interactive.sh gets hosed on make clean
 raster: must update dox docs fully
 mark: grab cursor and confine to root window when moving windows / resizing.
 mark: focus swtiching in multihead between the heads gets confused... :)
+
+raster: dialog redrawing of widgets has to be queued.... :)
 
 FEATURES:
 raster: add dnd to iconbox
