@@ -518,6 +518,10 @@ IclassApply(ImageClass * iclass, Window win, int w, int h,
 	dq->shape_propagate = 0;
 	dq->pager = NULL;
 	dq->redraw_pager = NULL;
+	dq->d = NULL;
+	dq->di = NULL;
+	dq->x = 0;
+	dq->y = 0;
 	AddItem(dq, "DRAW", dq->win, LIST_TYPE_DRAW);
 	EDBUG_RETURN_;
      }
