@@ -871,6 +871,10 @@ PagerRedraw(Pager * p, char newbg)
 	dq->pager = NULL;
 	dq->redraw_pager = p;
 	dq->newbg = newbg;
+	dq->d = NULL;
+	dq->di = NULL;
+	dq->x = 0;
+	dq->y = 0;
 	AddItem(dq, "DRAW", dq->win, LIST_TYPE_DRAW);
 	return;
      }
@@ -1018,6 +1022,10 @@ PagerForceUpdate(Pager * p)
 	dq->shape_propagate = 0;
 	dq->pager = p;
 	dq->redraw_pager = NULL;
+	dq->d = NULL;
+	dq->di = NULL;
+	dq->x = 0;
+	dq->y = 0;
 	AddItem(dq, "DRAW", dq->win, LIST_TYPE_DRAW);
 	return;
      }
